--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,8 +34,8 @@ server:
 
 openai:
   api:
-    key: ${OPENAI_API_KEY:your-openai-api-key-here}
+    key: ${OPENROUTER_API_KEY:your-openrouter-api-key-here}
   default:
-    model: gpt-4
+    model: openai/gpt-4
     max-tokens: 1000
     temperature: 0.7
