--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,10 +34,10 @@ logging:
 server:
   port: 8080
 
-openai:
+openrouter:
   api:
-    key: ${OPENROUTER_API_KEY:your-openrouter-api-key-here}
+    key: ${OPENROUTER_API_KEY}
   default:
-    model: openai/gpt-4
-    max-tokens: 1000
+    model: deepseek/deepseek-r1-0528:free
+    max-tokens: 2000
     temperature: 0.7
